objects/Service_Center__c/fields/ADP_Payroll_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>ADP_Payroll_Batch_ID__c</fullName>
    <label>ADP Payroll Batch ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>