objects/Service_Center__c/fields/Advanced_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Disposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Disposal</label>
    <type>Checkbox</type>
</CustomField>