objects/Service_Center__c/fields/Allow_Override_Logo_on_Inv__c.field-meta.xml
<CustomField>
    <fullName>Allow_Override_Logo_on_Inv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Override Logo on Inv.</label>
    <type>Checkbox</type>
</CustomField>