objects/Service_Center__c/fields/Billing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule</label>
    <referenceTo>Billing_Rule__c</referenceTo>
    <relationshipLabel>Service Centers</relationshipLabel>
    <relationshipName>Service_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>