objects/Service_Center__c/fields/Checking_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Checking_Account_2__c</fullName>
    <label>Checking Account 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>