objects/Service_Center__c/fields/D365_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>D365_Business_Unit__c</fullName>
    <label>D365 Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>