objects/Service_Center__c/fields/D365_LE__c.field-meta.xml
<CustomField>
    <fullName>D365_LE__c</fullName>
    <label>D365 LE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>