objects/Service_Center__c/fields/Disable_TM_Printing__c.field-meta.xml
<CustomField>
    <fullName>Disable_TM_Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable T&amp;M Printing</label>
    <type>Checkbox</type>
</CustomField>