objects/Service_Center__c/fields/Display_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Company_Name__c</fullName>
    <label>Display Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>