objects/Service_Center__c/fields/Disposal_Related_Asm_Cont_Opt1__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Related_Asm_Cont_Opt1__c</fullName>
    <label>Disposal Related Asm. Cont. Opt. 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>