objects/Service_Center__c/fields/EEC_Surcharge_Cost_Pct__c.field-meta.xml
<CustomField>
    <fullName>EEC_Surcharge_Cost_Pct__c</fullName>
    <label>EEC Surcharge Cost %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>