objects/Service_Center__c/fields/EFT_To_Street__c.field-meta.xml
<CustomField>
    <fullName>EFT_To_Street__c</fullName>
    <label>EFT To Street</label>
    <type>TextArea</type>
</CustomField>