objects/Service_Center__c/fields/Enable_Kronos_Integration__c.field-meta.xml
<CustomField>
    <fullName>Enable_Kronos_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Kronos Integration</label>
    <type>Checkbox</type>
</CustomField>