objects/Service_Center__c/fields/Energy_Environmental_Compliance_Pct__c.field-meta.xml
<CustomField>
    <fullName>Energy_Environmental_Compliance_Pct__c</fullName>
    <label>EEC %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>