objects/Service_Center__c/fields/EQAI_Company__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Company__c</fullName>
    <label>EQAI Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>