objects/Service_Center__c/fields/EQAI_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Profit_Center__c</fullName>
    <label>EQAI Profit Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>