objects/Service_Center__c/fields/EQAI_Profit_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Profit_Center_Name__c</fullName>
    <description>This field tracks EQAI Profit Center Name for accruals</description>
    <label>EQAI Profit Center Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>