objects/Service_Center__c/fields/Equipment_Fleet_No_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Fleet_No_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Fleet No. Not Required</label>
    <type>Checkbox</type>
</CustomField>