objects/Service_Center__c/fields/Exclude_Sales_Orders_SF_Nav_Integration__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Sales_Orders_SF_Nav_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Sales Orders SF/Nav Integration</label>
    <type>Checkbox</type>
</CustomField>