objects/Service_Center__c/fields/Fuel_Surcharge_Cost_Pct__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge_Cost_Pct__c</fullName>
    <label>Fuel Surcharge Cost %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>