objects/Service_Center__c/fields/Include_SO_in_EQAI_Invoice_Integration__c.field-meta.xml
<CustomField>
    <fullName>Include_SO_in_EQAI_Invoice_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include SO in EQAI Invoice Integration</label>
    <type>Checkbox</type>
</CustomField>