objects/Service_Center__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <label>Legal Entity Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>