objects/Service_Center__c/fields/Max_No_of_Emergency_T_M__c.field-meta.xml
<CustomField>
    <fullName>Max_No_of_Emergency_T_M__c</fullName>
    <label>Max No. of Emergency T&amp;M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>