objects/Service_Center__c/fields/NAV_ACV_Service_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>NAV_ACV_Service_Center_Code__c</fullName>
    <label>NAV ACV Service Center Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>