objects/Service_Center__c/fields/NAV_CCI_Service_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>NAV_CCI_Service_Center_Code__c</fullName>
    <label>NAV CCI Service Center Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>