objects/Service_Center__c/fields/NAV_Service_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>NAV_Service_Center_Code__c</fullName>
    <formula>IF(CONTAINS(Code__c, '-'), LEFT(Code__c, FIND('-', Code__c, 0) - 1), Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAV Service Center Code</label>
    <type>Text</type>
</CustomField>