objects/Service_Center__c/fields/No_PO_s_Allowed__c.field-meta.xml
<CustomField>
    <fullName>No_PO_s_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No PO's Allowed</label>
    <type>Checkbox</type>
</CustomField>