objects/Service_Center__c/fields/Outgoing_RSG_Division_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_RSG_Division_Mapping__c</fullName>
    <label>Outgoing RSG Division Mapping</label>
    <length>30</length>
    <type>Text</type>
</CustomField>