objects/Service_Center__c/fields/Payroll_CO_Code__c.field-meta.xml
<CustomField>
    <fullName>Payroll_CO_Code__c</fullName>
    <label>Payroll CO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>