objects/Service_Center__c/fields/Payroll_Tax_Pct__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Tax_Pct__c</fullName>
    <inlineHelpText>ACV’s portion of taxes paid as required by the Federal Unemployment Tax Act (FUTA), any State Unemployment Tax Acts (SUTA), Social Security (FICA), Medicare (MICA) and any other employer paid Local and State taxes. Tax rates vary by entity and location.</inlineHelpText>
    <label>Payroll Tax %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>