objects/Service_Center__c/fields/PO_Allow_Blank_SO_with_Direct_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>PO_Allow_Blank_SO_with_Direct_GL_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Allow Blank SO with Direct GL Account</label>
    <type>Checkbox</type>
</CustomField>