objects/Service_Center__c/fields/Prevent_New_and_Cloned_Sales_Orders__c.field-meta.xml
<CustomField>
    <fullName>Prevent_New_and_Cloned_Sales_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent New and Cloned Sales Orders</label>
    <type>Checkbox</type>
</CustomField>