objects/Service_Center__c/fields/Prevent_TM_Creation__c.field-meta.xml
<CustomField>
    <fullName>Prevent_TM_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent T&amp;M Creation</label>
    <type>Checkbox</type>
</CustomField>