objects/Service_Center__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price List</label>
    <referenceTo>Pricing__c</referenceTo>
    <relationshipLabel>Service Centers</relationshipLabel>
    <relationshipName>Service_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>