objects/Service_Center__c/fields/Quote_Closing_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>Quote_Closing_Paragraph__c</fullName>
    <label>Quote Closing Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>