objects/Service_Center__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Service Centers</relationshipLabel>
    <relationshipName>Service_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>