objects/Service_Center__c/fields/Remittance_Country__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Country__c</fullName>
    <label>Remittance Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryList</valueSetName>
    </valueSet>
</CustomField>