objects/Service_Center__c/fields/Remittance_Name2__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Name2__c</fullName>
    <label>Remittance Name2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>