objects/Service_Center__c/fields/Remittance_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Phone_No__c</fullName>
    <label>Remittance Phone No.</label>
    <type>Phone</type>
</CustomField>