objects/Service_Center__c/fields/Remittance_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Post_Code__c</fullName>
    <label>Remittance Post Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>