objects/Service_Center__c/fields/Remittance_State__c.field-meta.xml
<CustomField>
    <fullName>Remittance_State__c</fullName>
    <label>Remittance State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Remittance_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>