objects/Service_Center__c/fields/Remittance_Street__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Street__c</fullName>
    <label>Remittance Street</label>
    <type>TextArea</type>
</CustomField>