objects/Service_Center__c/fields/RSG_Division_No__c.field-meta.xml
<CustomField>
    <fullName>RSG_Division_No__c</fullName>
    <label>RSG Division No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>