objects/Service_Center__c/fields/Sales_Order_No_Series__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_No_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order No. Series</label>
    <referenceTo>Numbering_Series__c</referenceTo>
    <relationshipLabel>Service Centers (Job Numbering Series)</relationshipLabel>
    <relationshipName>Service_Centers_Job_Numbering_Series</relationshipName>
    <type>Lookup</type>
</CustomField>