objects/Service_Center__c/fields/Shop_Time_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Shop_Time_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop Time Sales Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Order__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>Sales Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Service Centers</relationshipLabel>
    <relationshipName>Service_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>