objects/Service_Center__c/fields/SO_Prefix__c.field-meta.xml
<CustomField>
    <fullName>SO_Prefix__c</fullName>
    <formula>Sales_Order_No_Series__r.Prefix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Prefix</label>
    <type>Text</type>
</CustomField>