objects/Service_Center__c/fields/Standard_AC_Opt2__c.field-meta.xml
<CustomField>
    <fullName>Standard_AC_Opt2__c</fullName>
    <label>Standard Assumptions &amp; Contingency Opt 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>