objects/Service_Center__c/fields/Standard_AC_Opt3__c.field-meta.xml
<CustomField>
    <fullName>Standard_AC_Opt3__c</fullName>
    <label>Standard Assumptions &amp; Contingency Opt 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>