objects/Service_Center__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>