objects/Service_Center__c/fields/T_M_Numbering_Series__c.field-meta.xml
<CustomField>
    <fullName>T_M_Numbering_Series__c</fullName>
    <formula>TM_No_Series__r.Prefix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;M Numbering Series</label>
    <type>Text</type>
</CustomField>