objects/Service_Center__c/fields/Temporary__c.field-meta.xml
<CustomField>
    <fullName>Temporary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temporary?</label>
    <type>Checkbox</type>
</CustomField>