objects/Service_Center__c/fields/Term_Conditions_Opt11__c.field-meta.xml
<CustomField>
    <fullName>Term_Conditions_Opt11__c</fullName>
    <label>Term &amp; Conditions Opt. 11</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>