objects/Service_Center__c/fields/TM_No_Series__c.field-meta.xml
<CustomField>
    <fullName>TM_No_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M No. Series</label>
    <referenceTo>Numbering_Series__c</referenceTo>
    <relationshipLabel>Service Centers(TM Numbering Series)</relationshipLabel>
    <relationshipName>Service_Centers_TM_Numbering_Series</relationshipName>
    <type>Lookup</type>
</CustomField>