objects/Service_Center__c/fields/TM_Service_Rep__c.field-meta.xml
<CustomField>
    <fullName>TM_Service_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M Service Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>