objects/Service_Center__c/fields/UEZ_No_Tax_on_PO__c.field-meta.xml
<CustomField>
    <fullName>UEZ_No_Tax_on_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UEZ - No Tax on PO</label>
    <type>Checkbox</type>
</CustomField>