objects/Service_Center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Outgoing_RSG_Division_Mapping__c</columns>
    <columns>NAME</columns>
    <columns>D365_LE__c</columns>
    <columns>D365_Business_Unit__c</columns>
    <columns>RSG_Division_No__c</columns>
    <columns>Description__c</columns>
    <columns>Shop_Time_Sales_Order__c</columns>
    <columns>TM_No_Series__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Region__c</columns>
    <columns>Blocked__c</columns>
    <columns>SO_Prefix__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blocked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>