objects/Service_Center__c/listViews/X1_Republic_Services.listView-meta.xml
<ListView>
    <fullName>X1_Republic_Services</fullName>
    <columns>Outgoing_RSG_Division_Mapping__c</columns>
    <columns>NAME</columns>
    <columns>RSG_Division_No__c</columns>
    <columns>Description__c</columns>
    <columns>Shop_Time_Sales_Order__c</columns>
    <columns>Override_Remittance_on_Invoice__c</columns>
    <columns>Remittance_Name__c</columns>
    <columns>TM_No_Series__c</columns>
    <columns>Max_No_of_Emergency_T_M__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Blocked__c</columns>
    <columns>Price_List__c</columns>
    <columns>Subsidiary_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary_Company__c</field>
        <operation>contains</operation>
        <value>1-Republic Services,cycle</value>
    </filters>
    <label>1-Republic Services (Unblocked)</label>
</ListView>